# disaster-impact-engine

./: .gitignore  IMPLEMENTATION_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  startup.py  test_system.py
configs/experiments/: combined_rrf.yaml  rule_based.yaml
data/raw/: .gitkeep
docs/: analog_similarity_method.md  combined_rrf.md  rule_based_advice_1.md  rule_based_classification.md  rule_based_method.md  strategy.md  strategy_advice_1.md
experiments/: __init__.py
experiments/all_cases/exp001_combined_rrf/: run.py
experiments/all_cases/exp002_rule_based/: run.py
pipelines/: __init__.py  combined_rrf.py  rule_based.py
results/: .gitkeep
scripts/: build_dataset.py  run_all_predictions.py  run_analysis.py  run_prediction.py
src/: __init__.py
src/analysis/: __init__.py  eda.py
src/analysis/typhoon/: eda.py  rainfall.py
src/data/: __init__.py  loader.py
src/evaluation/typhoon/: metrics.py
src/features/: __init__.py  typhoon.py
src/impact/: __init__.py  mapping.py
src/impact/typhoon/: mapping.py
src/models/: __init__.py  analog.py  base.py
src/models/typhoon/: analog.py  base.py
src/pipeline/: __init__.py  predict.py
src/pipeline/typhoon/: predict.py
src/similarity/: __init__.py  base.py  baseline.py  combined.py  dtw.py  knn.py  rule_based.py
src/similarity/typhoon/: combined.py  (+2 more)
src/visualization/: __init__.py  plots.py
web/: app.py
web/static/: style.css
web/templates/: analysis.html  base.html  index.html  methods.html  predict.html  prediction_detail.html  predictions.html
(+19 files in other folders)
