# 項目配置文件

[project]
name = "disaster-impact-engine"
version = "1.0.0"
description = "Typhoon analog-based disaster impact prediction system"
authors = [{"name": "Disaster Impact Engine Team"}]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
