[project]
name = "disaster-impact-engine"
version = "2.0.0"
description = "颱風類比災害預測系統 — 基於歷史相似度的影響導向預測"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "dtaidistance>=2.3",
    "openpyxl>=3.1",
]
